// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Contents loading from  Should load Websites 1`] = `
Array [
  Object {
    "fields": Object {
      "country_code": "FRA",
      "culture": "fr_FR",
      "domains": Array [
        "ekino.com",
      ],
      "enabled": true,
      "name": "Ekino",
      "order": 1,
      "path": "/",
    },
    "sys": Object {
      "contentType": Object {
        "sys": Object {
          "id": "rendr_website",
          "linkType": "ContentType",
          "type": "Link",
        },
      },
      "createdAt": "2019-08-21T11:00:42.276Z",
      "environment": Object {
        "sys": Object {
          "id": "master",
          "linkType": "Environment",
          "type": "Link",
        },
      },
      "id": "2g5lXpzZ0jPPwQViziSjtK",
      "locale": "en-US",
      "revision": 1,
      "space": Object {
        "sys": Object {
          "id": "f5bx295b472q",
          "linkType": "Space",
          "type": "Link",
        },
      },
      "type": "Entry",
      "updatedAt": "2019-08-21T11:00:42.276Z",
    },
  },
  Object {
    "fields": Object {
      "country_code": "GDB",
      "culture": "en_GB",
      "domains": Array [
        "ekino.co.uk",
      ],
      "enabled": true,
      "name": "Ekino UK",
      "order": 2,
      "path": "/uk",
    },
    "sys": Object {
      "contentType": Object {
        "sys": Object {
          "id": "rendr_website",
          "linkType": "ContentType",
          "type": "Link",
        },
      },
      "createdAt": "2019-08-21T12:43:36.952Z",
      "environment": Object {
        "sys": Object {
          "id": "master",
          "linkType": "Environment",
          "type": "Link",
        },
      },
      "id": "632kl7enPots4PISSnD6DV",
      "locale": "en-US",
      "revision": 1,
      "space": Object {
        "sys": Object {
          "id": "f5bx295b472q",
          "linkType": "Space",
          "type": "Link",
        },
      },
      "type": "Entry",
      "updatedAt": "2019-08-21T12:43:36.952Z",
    },
  },
]
`;

exports[`Contents loading from  Should raise an exception as no page will be found 1`] = `[NotFoundError: [Contentful] Unable to load the page - path: /, website.id: 632kl7enPots4PISSnD6DV]`;

exports[`Contents loading from  Should return existing page  1`] = `
Object {
  "fields": Object {
    "path": "/",
    "seo_description": "/",
    "seo_keywords": "/",
    "title": "homepage",
    "website": Object {
      "fields": Object {
        "country_code": "GDB",
        "culture": "en_GB",
        "enabled": true,
        "name": "Ekino UK",
        "path": "/uk",
      },
      "sys": Object {
        "contentType": Object {
          "sys": Object {
            "id": "rendr_website",
            "linkType": "ContentType",
            "type": "Link",
          },
        },
        "createdAt": "2019-08-21T12:43:36.952Z",
        "environment": Object {
          "sys": Object {
            "id": "master",
            "linkType": "Environment",
            "type": "Link",
          },
        },
        "id": "632kl7enPots4PISSnD6DV",
        "locale": "en-US",
        "revision": 1,
        "space": Object {
          "sys": Object {
            "id": "f5bx295b472q",
            "linkType": "Space",
            "type": "Link",
          },
        },
        "type": "Entry",
        "updatedAt": "2019-08-21T12:43:36.952Z",
      },
    },
  },
  "sys": Object {
    "contentType": Object {
      "sys": Object {
        "id": "rendr_page",
        "linkType": "ContentType",
        "type": "Link",
      },
    },
    "createdAt": "2019-08-21T15:43:17.711Z",
    "environment": Object {
      "sys": Object {
        "id": "master",
        "linkType": "Environment",
        "type": "Link",
      },
    },
    "id": "28dAkVDQuMmGBAX7IEOJDd",
    "locale": "en-US",
    "revision": 2,
    "space": Object {
      "sys": Object {
        "id": "f5bx295b472q",
        "linkType": "Space",
        "type": "Link",
      },
    },
    "type": "Entry",
    "updatedAt": "2019-08-21T15:43:44.995Z",
  },
}
`;

exports[`Contents loading from  Should return existing website  1`] = `
Object {
  "fields": Object {
    "country_code": "FRA",
    "culture": "fr_FR",
    "domains": Array [
      "ekino.com",
    ],
    "enabled": true,
    "name": "Ekino",
    "order": 1,
    "path": "/",
  },
  "sys": Object {
    "contentType": Object {
      "sys": Object {
        "id": "rendr_website",
        "linkType": "ContentType",
        "type": "Link",
      },
    },
    "createdAt": "2019-08-21T11:00:42.276Z",
    "environment": Object {
      "sys": Object {
        "id": "master",
        "linkType": "Environment",
        "type": "Link",
      },
    },
    "id": "2g5lXpzZ0jPPwQViziSjtK",
    "locale": "en-US",
    "revision": 1,
    "space": Object {
      "sys": Object {
        "id": "f5bx295b472q",
        "linkType": "Space",
        "type": "Link",
      },
    },
    "type": "Entry",
    "updatedAt": "2019-08-21T11:00:42.276Z",
  },
}
`;

exports[`Contents loading from  Should return non existing website  1`] = `[NotFoundError: [Contentful] Unable to load the website - domain: foobar.com]`;
